# Snake

./: .gitignore  CMakeLists.txt  README.md  apple.cpp  apple.hpp  build.cmd  direction.cpp  direction.hpp  engine.cpp  engine.hpp  main.cpp  point.cpp  point.hpp  snake.cpp  snake.hpp  viewer.cpp  viewer.hpp  viewer_console.hpp
src/app/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  direction.cpp  direction.hpp  point.cpp  point.hpp
src/model/: CMakeLists.txt  apple.cpp  apple.hpp  engine.cpp  engine.hpp  snake.cpp  snake.hpp
src/viewer/: CMakeLists.txt  viewer.cpp  viewer.hpp  viewer_console.hpp
